--- a/css/Comunidad.css
+++ b/css/Comunidad.css
@@ -8,7 +8,7 @@
   /* Estilos específicos para iPad en modo portrait */
 }
 
-/* Estilos de la cabecera */
+/*Estilos para la Navbar*/
 .header .navbar-brand {
   color: white !important;
 }
@@ -22,15 +22,23 @@
   color: rgb(99, 56, 56) !important;
 }
 
-@media (max-width: 700px) {
-  .nav-link {
-      text-align: center;
-  }
+.navbar-nav .dropdown-menu {
+right: 0;
+left: auto;
+}
+
+@media(max-width: 700px){
+  .nav-link{text-align: center;}
 }
 
 .header .navbar {
   background-image: linear-gradient(to right, #F5E2BE, #e07A76);
+  position: fixed; /* Makes the navbar stick to the top */
+  top: 0;          /* Aligns the navbar at the top */
+  width: 100%;     /* Ensures the navbar spans the full width */
+  z-index: 1000;   /* Keeps the navbar on top of other content */
 }
+
 
 /* Estilos generales */
 body {
@@ -106,13 +114,17 @@ h3 {
 /* título de la página */
 #title {
   text-align: left;
-  background-color: #FBE2DA;
+  background-image: linear-gradient(to bottom, #fcf7ed, #fff7f3, #fffafa, #fffcfe, #ffffff);
+  /* background-color: #FCF7ED; */
+  width:auto; 
+  border-radius: 10px;
 }
 
 /* texto del título */
 #title-1 {
   text-align: left;
-  margin-left: 38px;
+  margin-left: 20px;
+  z-index: 0;
 }
 
 /* Estilos para botones */
@@ -134,14 +146,15 @@ h3 {
   padding-left: 20px;
   height: 100%;
   border-radius: 12px;
+  z-index: 0;
 }
 
 #sticky-container {
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
-  z-index: 1000;
   padding: 10px;
+  z-index: 0;
 }
 
 #textMantener{
@@ -197,6 +210,12 @@ button#dropFilter:hover{
 /* Lado derecho */
 /* publicaciones */
 /* text area compartir algo */
+
+/* #colDer{
+  background-color: #fbfbfb;
+  border-radius: 15px;
+} */
+
 #postContent {
   width: 100%;
   height: 100px;
@@ -258,9 +277,8 @@ button#dropFilter:hover{
   margin: 10px;
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
-  font-style: normal;
   color: white !important;
-  font-size: 16.5px;
+  font-size: 18px;
 }
 
 #post-btn:hover{
@@ -268,8 +286,9 @@ button#dropFilter:hover{
 }
 
 #bt-Borr{
+  background-color: #DFE5DC;
   color: #3B4733;
-  border: none;
+  border: 1px solid #3B4733;
 }
 
 #bt-Borr:hover{
@@ -277,14 +296,18 @@ button#dropFilter:hover{
 }
 
 #bt-Des{
+  background-color: #DFE5DC;;
   color: #3B4733;
-  border: none;
+  border: 1px solid #3B4733;
 }
 
 #bt-Des:hover{
   background-color: #E1D3CB
 }
 
+.gap-2{
+  padding-right: 40px;
+}
 
 /* Colores específicos para los botones tarjetas y publicación */
 .badge-recomendacion {
@@ -494,3 +517,4 @@ footer{
 .my-5{
   margin: 0%;
 }
+/* hola :) */
