--- a/css/Registro.css
+++ b/css/Registro.css
@@ -69,7 +69,7 @@
 
 /* Estilos de la página de registro*/
     h1{
-        color: #E07A76;
+        color: #0a0000;
         text-shadow:  5px 5px 10px #e69999;
         width: 100%; /* Hace que el h1 ocupe todo el ancho de su contenedor */
       display: block; /* Asegura que el h1 se comporte como un elemento de bloque */
