--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -75,12 +75,17 @@ h3 {
     background-color: #f8c0a9; 
    
     line-height: 30px;
-    margin-right: 10px; 
+    margin-right: 10px;
+    margin: 4px; 
     
 }
 
 .icon-circle i {
     color: white; 
+}
+
+.fas{
+    justify-content: center; 
 }
 
 .info {
@@ -97,6 +102,7 @@ h3 {
 #myMap {
     width: 95%; 
     height: 220px;
+    margin-top: 4%;
 }
 .col-sm {
     margin-bottom: 20px; 
@@ -115,4 +121,32 @@ h3 {
     max-width: 470px; 
     margin-bottom: 0;
     margin-top:50px; 
+}
+
+@media only screen and (min-width: 320px) and (max-width: 575px){
+    #col-der{
+        margin-top:25px; 
+    }    
+}
+
+.form-check{
+    accent-color: #7C946C;
+}
+input[type="checkbox"]:checked {
+    background-color: #7C946C;
+}
+
+#btn-enviar{
+    .btn{
+        background-color: #7C946C;
+        border: #7C946C;
+        color: white !important;
+        text-align: center;
+    }
+    
+    .btn:hover{
+        background-color: #e07a76;
+        border: #e07a76;
+        border-radius: 10%;
+    }
 }
