--- a/css/Iniciar-Sesion.css
+++ b/css/Iniciar-Sesion.css
@@ -12,10 +12,6 @@
     color: rgb(99, 56, 56) !important;
 }
 
-@media(max-width: 700px){
-    .nav-link{text-align: center;}
-}
-
 .header .navbar {
     background-image: linear-gradient(to right, #F5E2BE, #e07A76);
 }
@@ -40,54 +36,45 @@
 
 
 /* Estilos para inicio de sesión*/
-#saludo{
-    margin-top: 30px;
-    text-align: center;
-    
-}
 
-@media (max-width: 576px) {
-    #saludo {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      
-    }
-    
-   
-  }
-
-
-#logodos{
-    max-width: 100%; /*La imagen no puede ser más ancha que el contenedor */
-    max-height:100%; /* La imagen no puede ser más alta que el contenedor */
-    
-}
-
-#left{
+#left {
     position:relative;
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-right: 10%;
+    margin-right: 5%;
+}
+
+#aventura{
+    margin-top: 30px;
+    text-align: center;   
+}
+
+@media screen and (min-width: 576px){
+
+    #img-woman{
+        max-width: 100%; /*La imagen no puede ser más ancha que el contenedor */
+        height: auto; /* La imagen no puede ser más alta que el contenedor */
+        margin-top: 4%;
+        margin-bottom: 4%;
+        margin-right: 5%;
+        border-radius: 2%;
+    }
+    #welcome{
+        margin-top: 30px;
+        align-items: center;  
+    }
 }
 
 @media (max-width: 576px) {
-    #left {
-        flex-direction: column;
-    }
 
-    #logodos{
+    #img-woman{
         max-width: 70%; /*Reducir el tamaño en pantallas pequeñas*/
-        margin-top: 15px;
+        margin-top: 20px;
         margin-bottom: 20px; 
+        border-radius: 2%;
     }
 
-    #saludo{
-        margin-top: auto;
-        text-align: center;
-    }
 }
 
 .btn{
