--- a/css/Mi-Perfil.css
+++ b/css/Mi-Perfil.css
@@ -57,6 +57,43 @@
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
             }
 
+            .btn-center{
+              display:block;
+              margin: 10px auto 0 auto;
+              color:#ffffff;
+              background-color: #7c946c;
+            }
+
+            .btn-center:hover{
+              background-color: #e07a76;
+              border: #e07a76;
+              border-radius: 10%;
+              color: white;
+            }
+
+            .add-post{
+              display:flex;
+              justify-content: center;
+            }
+
+            #post-btn {
+              
+              background-color: #809871;
+              border-radius: 10px;
+              border: none;
+              gap: 10px;
+              padding: 8px;
+              margin: 10px;
+              font-family: "IBM Plex Sans", sans-serif;
+              font-weight: 400;
+              color: white !important;
+              width:100%;
+            }
+
+            #post-btn:hover{
+              background-color: #586A4D;
+            }
+
 
             #userName {
                 font-weight: 400;
